https on google maps

--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
   <script type="text/javascript" src="js/jquery.stellar.min.js"></script>
   <script type="text/javascript" src="js/bootstrap-datepicker.js"></script>
   <script type="text/javascript"
-    src="http://maps.google.com/maps/api/js?sensor=false&key=AIzaSyBlKGTsCGILq91T17I9B1mnRlfkGIaJ9lQ"></script>
+    src="https://maps.google.com/maps/api/js?sensor=false&key=AIzaSyBlKGTsCGILq91T17I9B1mnRlfkGIaJ9lQ"></script>
   <script src="js/gmap3.min.js"></script>
   <script type="text/javascript" src="js/switcher.js"></script>
   <script src="js/script.js"></script>
