changes in the phone numbers in the footer section and added script for analytics

--- a/index.html
+++ b/index.html
@@ -29,6 +29,19 @@
 
     gtag('config', 'AW-698606797');
   </script>
+
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-99796476-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-99796476-1');
+  </script>
+  
+
   <script>
     function gtag_report_conversion(url) {
       var callback = function () {
@@ -221,7 +234,7 @@
                   <i class="fa fa-whatsapp"></i>
                 </div>
                 <div class="contact-info">
-                  <p>+549 221 3577330</p>
+                  <p>+549 221 5082882</p>
                 </div>
               </li>
 
@@ -230,7 +243,7 @@
                   <i class="fa fa-phone"></i>
                 </div>
                 <div class="contact-info">
-                  <p>0221 492 2210</p>
+                  <p>+549 221 5082882</p>
                 </div>
               </li>
 
@@ -351,7 +364,7 @@
   </div>
 
   <div class="whatsapp" style="margin-bottom:3em;">
-    <a ng-href="https://wa.me/542213577330"><i class="fa fa-whatsapp"></i></a>
+    <a ng-href="https://wa.me/+5492215082882"><i class="fa fa-whatsapp"></i></a>
   </div>
 
 
